# MyWorkFlow

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/factory/: WFConnection.h  WFGraphTask.cpp  WFGraphTask.h  WFTask.h  WFTask.inl  WFTaskFactory.cpp  WFTaskFactory.h  Workflow.cpp  Workflow.h
src/kernel/: CommRequest.cpp  CommRequest.h  CommScheduler.cpp  CommScheduler.h  Communicator.cpp  Communicator.h  ExecRequest.h  Executor.cpp  Executor.h  IORequest.h  IOService_linux.cpp  IOService_linux.h  IOService_thread.cpp  IOService_thread.h  SleepRequest.h  SubTask.cpp  SubTask.h  list.h  mpoller.c  mpoller.h  msgqueue.c  msgqueue.h  poller.c  poller.h  rbtree.c  rbtree.h  thrdpool.c  thrdpool.h  threadpool.c  threadpool.h
src/manager/: DnsCache.cpp  DnsCache.h  EndpointParams.h  RouteManager.cpp  RouteManager.h  WFGlobal.cpp  WFGlobal.h
src/protocol/: DnsMessage.cpp  DnsMessage.h  HttpMessage.cpp  HttpMessage.h  HttpUtil.cpp  HttpUtil.h  PackageWrapper.cpp  PackageWrapper.h  ProtocolMessage.h  dns_parser.c  dns_parser.h  dns_type.h  dns_types.h  http_parser.c  http_parser.h
src/util/: StringUtil.cpp  StringUtil.h  URIParser.cpp  URIParser.h
